--- a/src/Weaver/Weaver.csproj
+++ b/src/Weaver/Weaver.csproj
@@ -40,7 +40,50 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodeModel\FloatShaderPropertyNode.cs" />
+    <Compile Include="CodeModel\FloatToken.cs" />
+    <Compile Include="CodeModel\IdentifierToken.cs" />
+    <Compile Include="CodeModel\IntToken.cs" />
+    <Compile Include="CodeModel\LiteralToken.cs" />
+    <Compile Include="CodeModel\LiteralTokenType.cs" />
+    <Compile Include="CodeModel\ParseNode.cs" />
+    <Compile Include="CodeModel\ShaderCodeToken.cs" />
+    <Compile Include="CodeModel\ShaderNode.cs" />
+    <Compile Include="CodeModel\ShaderPropertyNode.cs" />
+    <Compile Include="CodeModel\ShaderPropertyNodeCollection.cs" />
+    <Compile Include="CodeModel\StringToken.cs" />
+    <Compile Include="CodeModel\SurfaceInputNode.cs" />
+    <Compile Include="CodeModel\SurfaceNode.cs" />
+    <Compile Include="CodeModel\TextureShaderPropertyNode.cs" />
+    <Compile Include="CodeModel\Token.cs" />
+    <Compile Include="CodeModel\TokenType.cs" />
+    <Compile Include="CodeModel\Vector2ShaderPropertyNode.cs" />
+    <Compile Include="CodeModel\Vector3ShaderPropertyNode.cs" />
+    <Compile Include="CodeModel\Vector4ShaderPropertyNode.cs" />
+    <Compile Include="Vector3.cs" />
+    <Compile Include="Vector2.cs" />
+    <Compile Include="Parser\BufferPosition.cs" />
+    <Compile Include="Parser\ErrorEventArgs.cs" />
+    <Compile Include="Parser\ErrorEventHandler.cs" />
+    <Compile Include="Parser\Keywords.cs" />
+    <Compile Include="Parser\Lexer.cs" />
+    <Compile Include="Parser\LexerBase.cs" />
+    <Compile Include="Parser\Parser.cs" />
+    <Compile Include="Parser\ShaderParser.cs" />
+    <Compile Include="Parser\TextBuffer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Vector4.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
