--- a/src/Weaver/Weaver.csproj
+++ b/src/Weaver/Weaver.csproj
@@ -40,35 +40,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CodeModel\FloatShaderPropertyNode.cs" />
-    <Compile Include="CodeModel\FloatToken.cs" />
-    <Compile Include="CodeModel\IdentifierToken.cs" />
-    <Compile Include="CodeModel\IntToken.cs" />
-    <Compile Include="CodeModel\LiteralToken.cs" />
-    <Compile Include="CodeModel\LiteralTokenType.cs" />
-    <Compile Include="CodeModel\ParseNode.cs" />
-    <Compile Include="CodeModel\ShaderCodeToken.cs" />
-    <Compile Include="CodeModel\ShaderNode.cs" />
-    <Compile Include="CodeModel\ShaderPropertyNode.cs" />
-    <Compile Include="CodeModel\ShaderPropertyNodeCollection.cs" />
-    <Compile Include="CodeModel\StringToken.cs" />
-    <Compile Include="CodeModel\SurfaceNode.cs" />
-    <Compile Include="CodeModel\TextureShaderPropertyNode.cs" />
-    <Compile Include="CodeModel\Token.cs" />
-    <Compile Include="CodeModel\TokenType.cs" />
-    <Compile Include="CodeModel\Vector2ShaderPropertyNode.cs" />
-    <Compile Include="CodeModel\Vector3ShaderPropertyNode.cs" />
-    <Compile Include="CodeModel\Vector4ShaderPropertyNode.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\FloatShaderPropertyNode.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\FloatToken.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\IdentifierToken.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\IntToken.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\LiteralToken.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\LiteralTokenType.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\ParseNode.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\ShaderCodeToken.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\ShaderNode.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\ShaderPropertyNode.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\ShaderPropertyNodeCollection.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\StringToken.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\SurfaceNode.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\TextureShaderPropertyNode.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\Token.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\TokenType.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\Vector2ShaderPropertyNode.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\Vector3ShaderPropertyNode.cs" />
+    <Compile Include="SurfaceShaders\CodeModel\Vector4ShaderPropertyNode.cs" />
     <Compile Include="Vector3.cs" />
     <Compile Include="Vector2.cs" />
-    <Compile Include="Parser\BufferPosition.cs" />
-    <Compile Include="Parser\ErrorEventArgs.cs" />
-    <Compile Include="Parser\ErrorEventHandler.cs" />
-    <Compile Include="Parser\Keywords.cs" />
-    <Compile Include="Parser\Lexer.cs" />
-    <Compile Include="Parser\Parser.cs" />
-    <Compile Include="Parser\ShaderParser.cs" />
-    <Compile Include="Parser\TextBuffer.cs" />
+    <Compile Include="SurfaceShaders\Parser\BufferPosition.cs" />
+    <Compile Include="SurfaceShaders\Parser\ErrorEventArgs.cs" />
+    <Compile Include="SurfaceShaders\Parser\ErrorEventHandler.cs" />
+    <Compile Include="SurfaceShaders\Parser\Keywords.cs" />
+    <Compile Include="SurfaceShaders\Parser\Lexer.cs" />
+    <Compile Include="SurfaceShaders\Parser\Parser.cs" />
+    <Compile Include="SurfaceShaders\Parser\ShaderParser.cs" />
+    <Compile Include="SurfaceShaders\Parser\TextBuffer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -82,6 +82,19 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\PixelShader.hlsl" />
+    <None Include="Resources\PixelShaderOutput.hlsl" />
+    <None Include="Resources\VertexShaderOutput.hlsl" />
+    <None Include="Resources\VertexShader.hlsl" />
+    <None Include="Resources\VertexShaderInput.hlsl" />
+    <None Include="Resources\LightingModels\BlinnPhong.hlsl" />
+    <None Include="Resources\LightingModels\FlatShading.hlsl" />
+    <None Include="Resources\LightingModels\Lambert.hlsl" />
+    <None Include="Resources\Lights\DirectionalLight.hlsl" />
+    <None Include="Resources\Lights\LightCommon.hlsl" />
+    <None Include="Resources\Lights\PointLight.hlsl" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
