--- a/src/Weaver.Tests/Weaver.Tests.csproj
+++ b/src/Weaver.Tests/Weaver.Tests.csproj
@@ -46,6 +46,7 @@
     <Compile Include="SurfaceShaders\Parser\LexerTests.cs" />
     <Compile Include="SurfaceShaders\Parser\ShaderParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WeaverTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
