--- a/src/Weaver.Tests/Weaver.Tests.csproj
+++ b/src/Weaver.Tests/Weaver.Tests.csproj
@@ -43,10 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SurfaceShaders\Parser\LexerTests.cs" />
-    <Compile Include="SurfaceShaders\Parser\ShaderParserTests.cs" />
+    <Compile Include="Parser\LexerTests.cs" />
+    <Compile Include="Parser\ShaderParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WeaverTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
