--- a/src/Weaver.Content.Pipeline.Tests/Weaver.Content.Pipeline.Tests.csproj
+++ b/src/Weaver.Content.Pipeline.Tests/Weaver.Content.Pipeline.Tests.csproj
@@ -52,6 +52,7 @@
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Xna.Framework.Graphics, Version=4.0.0.0, Culture=neutral, PublicKeyToken=842cf8be1de50553, processorArchitecture=x86" />
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.6.0.12054\lib\nunit.framework.dll</HintPath>
     </Reference>
