--- a/src/Weaver.Content.Pipeline/Weaver.Content.Pipeline.csproj
+++ b/src/Weaver.Content.Pipeline/Weaver.Content.Pipeline.csproj
@@ -70,8 +70,10 @@
     <Compile Include="CodeModel\ShaderNode.cs" />
     <Compile Include="CodeModel\ShaderPropertyNode.cs" />
     <Compile Include="CodeModel\ShaderPropertyNodeCollection.cs" />
+    <Compile Include="CodeModel\StateNode.cs" />
     <Compile Include="CodeModel\StringToken.cs" />
     <Compile Include="CodeModel\SurfaceNode.cs" />
+    <Compile Include="CodeModel\TechniqueNode.cs" />
     <Compile Include="CodeModel\TextureShaderPropertyNode.cs" />
     <Compile Include="CodeModel\Token.cs" />
     <Compile Include="CodeModel\TokenType.cs" />
@@ -81,7 +83,6 @@
     <Compile Include="CompiledShaderContent.cs" />
     <Compile Include="Parser\BufferPosition.cs" />
     <Compile Include="Parser\ErrorEventArgs.cs" />
-    <Compile Include="Parser\ErrorEventHandler.cs" />
     <Compile Include="Parser\Keywords.cs" />
     <Compile Include="Parser\Lexer.cs" />
     <Compile Include="Parser\Parser.cs" />
